Fix bug header: - Hide button passive & enable video on mobile - Too long station name overlap playlist tab https://github.com/mgm-interns/teamradio2-frontend/issues/323

--- a/src/Modules/Station/Components/OnlineUsers/OnlineUsers.scss
+++ b/src/Modules/Station/Components/OnlineUsers/OnlineUsers.scss
@@ -32,6 +32,7 @@
   cursor: pointer;
   position: relative;
   margin-left: 1.5rem;
+  min-width: 90px;
 }
 
 .online-users-length {
